# build-your-own-logit-processor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 01_what_are_logits.md  02_architecture.md  03_processor_reference.md  04_usage_guide.md  05_extending.md
logit_lens/: __init__.py  base.py  pipeline.py  processors.py  serialization.py  utils.py
scripts/: demo.py
tests/: conftest.py  test_base.py  test_frequency_penalty.py  test_pipeline.py  test_repetition_penalty.py  test_temperature.py  test_topk.py  test_topp.py  test_typical_decoding.py  test_utils.py
