[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logit-lens"
version = "0.1.0"
description = "Composable logit processors for autoregressive decoding."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Open Source Contributors" },
]
keywords = ["nlp", "transformers", "sampling", "decoding", "logits"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch>=2.0",
  "transformers>=4.35",
]

[project.optional-dependencies]
dev = [
  "black>=24.0",
  "hypothesis>=6.0",
  "mypy>=1.8",
  "pytest>=8.0",
  "pytest-benchmark>=4.0",
  "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
include = ["logit_lens*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.mypy]
strict = true
python_version = "3.10"
files = ["logit_lens", "tests", "scripts"]

[[tool.mypy.overrides]]
module = ["transformers", "transformers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: marks integration tests that require model downloads or longer runtime",
]
addopts = "--cov=logit_lens --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
branch = true
source = ["logit_lens"]

[tool.coverage.report]
show_missing = true
